fix: tooltips have more contrast and larger text for legibility

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -16,6 +16,7 @@
 
 ::ng-deep .ngx-feedback-modal__container {
   transform: translate(-350px, -250px) !important;
+  font-family: 'Quicksand' !important;
 }
 
 @media screen and (max-width: 700px) {
