--- a/src/app/pages/quickMaps/components/sideNavContent/sideNavContent.component.scss
+++ b/src/app/pages/quickMaps/components/sideNavContent/sideNavContent.component.scss
@@ -196,10 +196,6 @@ mat-slide-toggle {
 }
 
 :host::ng-deep {
-  & .mat-tooltip {
-    font-size: 12px;
-  }
-
   & .mat-slide-toggle-label {
     padding: 1em;
   }
